[package]
name = "porkbun-ip-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
reqwest = { version = "0.12.25", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version = "1.48.0", features= ["rt", "macros", "rt-multi-thread"]}

[profile.release]
opt-level = 'z'     # Optimize for size (or 's' for slightly less aggressive)
lto = true          # Enable Link-Time Optimization
codegen-units = 1   # Reduce parallel codegen for better optimization
panic = 'abort'     # Remove unwinding code
strip = true        # Strip symbols from binary
