[package]
name = "pbip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
reqwest = { version = "0.12.25", features = ["json"] }
serde = "1.0.228"
tokio = {version = "1.48.0", features= ["rt", "macros", "rt-multi-thread"]}

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
